--- a/TrayApplication/MainWindow.xaml
+++ b/TrayApplication/MainWindow.xaml
@@ -5,8 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TrayApplication"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="100" Width="275">
     <Grid>
-        
+        <Label Grid.Row="0" Grid.Column="0" x:Name="Runtime">Runtime : </Label>
     </Grid>
 </Window>
